--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -321,9 +321,9 @@ button {
         padding-left: 15px;
     }
     .navbar-collapse {
-        background-color: rgba(black, 0.75);
+        /* background-color: rgba(black, 0.75);
         @include max_tablet{
             background-color: rgba(0, 0, 0, 0.15);
-        }
+        } */
     }
 }
