--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -16,9 +16,9 @@
 
 
 $default-text-shadow-color:     rgba(black, 1);
-$default-text-shadow-blur:      5px;
+$default-text-shadow-blur:      3px;
 $default-text-shadow-h-offset:  0px;
-$default-text-shadow-v-offset:  1px;
+$default-text-shadow-v-offset:  2px;
 
 
 
@@ -45,19 +45,20 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     // @extend %redtape;
     font-size:      60px;
-    margin-bottom:  30px;
+    margin-bottom:  50px;
     margin-left:    -4px;
     @include single-text-shadow;
     @include max_desktop {
         font-size: 49px;
+        margin-bottom:  40px;
     }
     @include max_tablet {
-        font-size: 49px;
+        font-size: 47px;
     }
     a{
-        color: #aaa;
+        color: white;
         &:hover {
-            color: white;
+            color: lighten($blue, 25%);
         }
     }
 }
