--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -109,7 +109,7 @@ a:hover {
         padding-top: 0px;
     }
     > .container {
-        padding-top: 15px;
+        // padding-top: 15px;
         @extend %opaqueBg;
         @include max_tablet{
             background-color: transparent;
@@ -117,6 +117,7 @@ a:hover {
     }
 }
     .main-content-inner {
+        padding-bottom: 0;
         .col-sm-6 {
             @include max_tablet{
                 padding: 0;
@@ -178,6 +179,7 @@ a:hover {
 .row-thumbnails {
     margin-left: -15px;
     margin-right: -15px;
+    margin-bottom: 0;
 
     li {
         @include max($pager + 50){
@@ -214,7 +216,7 @@ $thumb_hover: $red;
 
         @include max_tablet {
             @include opacity(1);
-            @include filter(grayscale(0));
+            @include filter(grayscale(100%));
             border: 3px dotted $thumb_back;
             width: 100% !important;
         }
@@ -423,10 +425,10 @@ $thumb_hover: $red;
 }
 
 .entry-content {
-    padding: 3px;
+    padding: 15px 3px;
     p {
         margin-bottom: 15px;
-        // @include single-text-shadow;
+        @include single-text-shadow;
         @include max_laptop {
             font-size: 15px;
             line-height: 21px;
@@ -476,7 +478,7 @@ $thumb_hover: $red;
 
 
 .hero-right {
-    margin-top: 10px;
+    margin-top: 21px;
     margin-bottom: 40px;
     @extend %boxShadow;
     @include max_tablet {
@@ -523,7 +525,7 @@ $thumb_hover: $red;
 #cherry-blossoms{
     @include max_tablet{
         z-index: -1;
-        @include opacity(0.5);
+        // @include opacity(0.75);
     }
 }
 #cb-a{
@@ -544,11 +546,20 @@ $thumb_hover: $red;
     }
     @include max_tablet{
         // width: 100%;
-        background-position: -900px -340px;
+        background-position: -998px -90px;//-900px -347px;
     }
 }
+.home #cb-a {
+    @include max_tablet{
+        background-position: -1000px -166px;
+    }
 
-
+}
+.blog #cb-a {
+    @include max_tablet{
+        background-position: -852px -350px;
+    }
+}
 /*
  *  Admin Menu 
  */
