misc bg positions

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -551,7 +551,7 @@ $thumb_hover: $red;
 }
 .home #cb-a {
     @include max_tablet{
-        background-position: -1000px -166px;
+        background-position: -975px -78px;//-1000px -166px;
     }
 
 }
