--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -133,7 +133,7 @@ code, pre, .highlight {
 
 /* line 88, ../scss/_mixins.scss */
 .navbar > .container, #footer, .main-content > .container {
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 /* line 91, ../scss/_mixins.scss */
@@ -743,7 +743,7 @@ code, pre, .highlight {
 
 /* line 88, ../scss/_mixins.scss */
 .navbar > .container, #footer, .main-content > .container {
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 /* line 91, ../scss/_mixins.scss */
@@ -1235,7 +1235,7 @@ a:hover {
   -o-transition: padding, 1s;
   transition: padding, 1s;
   font-family: "Dosis", sans-serif !important;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(51, 51, 51, 0.9);
 }
 /* line 209, ../scss/custom.scss */
 .thumbnail img {
@@ -1263,7 +1263,7 @@ a:hover {
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
     filter: grayscale(100%);
-    border: 3px dotted rgba(255, 255, 255, 0.2);
+    border: 3px dotted rgba(51, 51, 51, 0.9);
     width: 100% !important;
   }
 }
@@ -1670,19 +1670,32 @@ a:hover {
 @media only all and (max-width: 767px) {
   /* line 531, ../scss/custom.scss */
   #cb-a {
-    background-position: -974px -90px;
+    background-position: -966px -90px;
   }
 }
 
 @media only all and (max-width: 767px) {
   /* line 552, ../scss/custom.scss */
   .home #cb-a {
-    background-position: -975px -78px;
+    background-position: -1104px -204px;
   }
 }
 
 @media only all and (max-width: 767px) {
-  /* line 558, ../scss/custom.scss */
+  /* line 557, ../scss/custom.scss */
+  .home .entry-content {
+    padding: 0;
+  }
+}
+@media only all and (max-width: 479px) {
+  /* line 557, ../scss/custom.scss */
+  .home .entry-content {
+    margin-top: -15px;
+  }
+}
+
+@media only all and (max-width: 767px) {
+  /* line 565, ../scss/custom.scss */
   .blog #cb-a {
     background-position: -852px -350px;
   }
@@ -1691,7 +1704,7 @@ a:hover {
 /*
  *  Admin Menu 
  */
-/* line 567, ../scss/custom.scss */
+/* line 574, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
