--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1654,6 +1654,8 @@ a:hover {
   background-repeat: no-repeat;
   height: 1100px;
   width: 100%;
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
+  opacity: 0.7;
 }
 @media only all and (max-width: 1199px) {
   /* line 531, ../scss/custom.scss */
