--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -18,6 +18,10 @@ body {
     padding: 0;
     overflow-x: hidden;
     background-color: #000;
+
+    @include max_tablet{
+        padding-top: 30px;
+    }
 }
 article {
     padding-left: 0 !important;
@@ -481,7 +485,8 @@ $thumb_hover: $red;
 .hero-right {
     margin-top: 21px;
     margin-bottom: 40px;
-    border: 3px dotted black;
+    // border: 3px dotted #666;
+    
 
     @extend %boxShadow;
     @include max_tablet {
@@ -497,6 +502,9 @@ $thumb_hover: $red;
 .above-header {
     overflow: visible;
     height: 500px;
+    @include max_tablet{
+        height: 270px;
+    }
 
     h1 {
         margin-top: 30px;
@@ -531,7 +539,7 @@ $thumb_hover: $red;
 #cherry-blossoms{
     @include max_tablet{
         z-index: -1;
-        // @include opacity(0.75);
+        // @include opacity(0.5);
     }
 }
 #cb-a{
@@ -549,22 +557,25 @@ $thumb_hover: $red;
         background-position: -490px 50px;
     }
     @include max_tablet{
-        @include opacity(0.7);
+        // @include opacity(0.7);
         // width: 100%;
         background-position: -966px -90px;//-900px -347px;
     }
 }
 .home #cb-a {
-    background-position: 270% 20px;
+    background-position: -550px 13px;
 
     @include max_desktop {
-        background-position: 180% 20px;
+        background-position: -650px 20px;
     }
     @include max_laptop {
-        background-position: 140% 20px;
+        background-position: -750px 20px;
     }
     @include max_tablet{
-        background-position: -1024px -204px;//-1000px -166px;
+        background-position: -750px -404px;
+    }
+    @include max_phone {
+        background-position: -766px -404px;
     }
 }
 .home .entry-content {
