--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -3,8 +3,6 @@
  */
 
 @import "compass/css3";
-// @import "compass/reset";
-// @import "compass/layout";
 @import "vars";
 @import "reset";
 @import "responsive";
@@ -52,7 +50,7 @@ table {
 a{
     color: $blue;
     &:hover {
-        color: $cyan;
+        color: lighten($blue, 13%);
     }
 }
 a:hover {
