--- a/assets/scss/_vars.scss
+++ b/assets/scss/_vars.scss
@@ -12,6 +12,7 @@ $pad-md: 15px;
 /* Colors */
 $red:       #b12e4f;//#d2322d;
 $blue:      #bf7485;//#0074a2;
+$info: 		#555;
 $cyan:      #2ea2cc;
 $green:     #5cb85c;
 $yellow:    #f0ad4e;
