--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1038,12 +1038,6 @@ body {
   overflow-x: hidden;
   background-color: #000;
 }
-@media only all and (max-width: 767px) {
-  /* line 15, ../scss/custom.scss */
-  body {
-    padding-top: 30px;
-  }
-}
 
 /* line 24, ../scss/custom.scss */
 article {
@@ -1656,7 +1650,11 @@ a:hover {
 .above-header h1 {
   margin-top: 30px;
   font-size: 75px;
-  z-index: 999;
+  position: absolute;
+  top: 0;
+  left: auto !important;
+  right: 0;
+  padding: 15px;
 }
 @media only all and (max-width: 1199px) {
   /* line 513, ../scss/custom.scss */
@@ -1671,12 +1669,13 @@ a:hover {
   }
 }
 
-/* line 525, ../scss/custom.scss */
+/* line 530, ../scss/custom.scss */
 #above-header-container {
   height: 100%;
+  position: relative;
 }
 
-/* line 529, ../scss/custom.scss */
+/* line 535, ../scss/custom.scss */
 #cherry-blossoms {
   width: 100%;
   height: auto;
@@ -1684,19 +1683,19 @@ a:hover {
   z-index: 21;
 }
 
-/* line 536, ../scss/custom.scss */
+/* line 542, ../scss/custom.scss */
 .page-id-21 #cherry-blossoms {
   z-index: 999;
 }
 
 @media only all and (max-width: 767px) {
-  /* line 543, ../scss/custom.scss */
+  /* line 549, ../scss/custom.scss */
   #cherry-blossoms {
     z-index: -1;
   }
 }
 
-/* line 549, ../scss/custom.scss */
+/* line 555, ../scss/custom.scss */
 #cb-a {
   background: url('/wp-content/themes/jn-wpbs/assets/img/cherry-blossom.png?1388933978');
   background-position: -162px 50px;
@@ -1705,72 +1704,72 @@ a:hover {
   width: 100%;
 }
 @media only all and (max-width: 1199px) {
-  /* line 549, ../scss/custom.scss */
+  /* line 555, ../scss/custom.scss */
   #cb-a {
     background-position: -370px 50px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 549, ../scss/custom.scss */
+  /* line 555, ../scss/custom.scss */
   #cb-a {
     background-position: -490px 50px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 549, ../scss/custom.scss */
+  /* line 555, ../scss/custom.scss */
   #cb-a {
-    background-position: -966px -90px;
+    height: 370px;
+    width: 620px;
+    background-size: contain;
+    background-position: 0px -90px;
   }
 }
 
-/* line 569, ../scss/custom.scss */
+/* line 580, ../scss/custom.scss */
 .home #cb-a {
   background-position: -550px 13px;
 }
 @media only all and (max-width: 1199px) {
-  /* line 569, ../scss/custom.scss */
+  /* line 580, ../scss/custom.scss */
   .home #cb-a {
     background-position: -650px 20px;
   }
 }
 @media only all and (max-width: 991px) {
-  /* line 569, ../scss/custom.scss */
+  /* line 580, ../scss/custom.scss */
   .home #cb-a {
     background-position: -750px 20px;
   }
 }
 @media only all and (max-width: 767px) {
-  /* line 569, ../scss/custom.scss */
+  /* line 580, ../scss/custom.scss */
   .home #cb-a {
-    background-position: -750px -404px;
-  }
-}
-@media only all and (max-width: 479px) {
-  /* line 569, ../scss/custom.scss */
-  .home #cb-a {
-    background-position: -766px -404px;
+    height: 370px;
+    width: 620px;
+    background-size: contain;
+    background-position: -140px -170px;
   }
 }
 
 @media only all and (max-width: 767px) {
-  /* line 585, ../scss/custom.scss */
+  /* line 605, ../scss/custom.scss */
   .home .entry-content {
     padding: 0;
   }
 }
 @media only all and (max-width: 479px) {
-  /* line 585, ../scss/custom.scss */
+  /* line 605, ../scss/custom.scss */
   .home .entry-content {
     margin-top: -15px;
   }
 }
 
-/* line 593, ../scss/custom.scss */
+/* line 613, ../scss/custom.scss */
 .blog #cb-a {
   background-position: 70% -84px;
 }
 @media only all and (max-width: 767px) {
-  /* line 593, ../scss/custom.scss */
+  /* line 613, ../scss/custom.scss */
   .blog #cb-a {
     background-position: -852px -350px;
   }
@@ -1779,7 +1778,7 @@ a:hover {
 /*
  *  Admin Menu 
  */
-/* line 603, ../scss/custom.scss */
+/* line 623, ../scss/custom.scss */
 #adminmenu #menu-posts-design .wp-menu-image:before {
   content: '\f85' !important;
 }
