--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -18,7 +18,7 @@ body {
     background-color: #000;
 
     @include max_tablet{
-        padding-top: 30px;
+        // padding-top: 30px;
     }
 }
 article {
@@ -513,7 +513,12 @@ $thumb_hover: $red;
     h1 {
         margin-top: 30px;
         font-size: 75px;
-        z-index: 999;
+        // z-index: 999;
+        position: absolute;
+        top: 0;
+        left: auto !important;
+        right: 0;
+        padding: 15px;
         @include max_desktop{
             font-size: 65px;
         }
@@ -524,6 +529,7 @@ $thumb_hover: $red;
 }
 #above-header-container {
     height: 100%;
+    position: relative;
 }
 
 #cherry-blossoms{
@@ -563,7 +569,12 @@ $thumb_hover: $red;
     @include max_tablet{
         // @include opacity(0.7);
         // width: 100%;
-        background-position: -966px -90px;//-900px -347px;
+        // background-position: -966px -90px;//-900px -347px;
+        height: 370px;
+        width: 620px;
+        background-size: contain;
+        background-position: 0px -90px;
+
     }
 }
 .home #cb-a {
@@ -576,10 +587,19 @@ $thumb_hover: $red;
         background-position: -750px 20px;
     }
     @include max_tablet{
-        background-position: -750px -404px;
+        // background-position: -750px -404px;
     }
     @include max_phone {
-        background-position: -766px -404px;
+        // background-position: -766px -404px;
+    }
+    @include max_tablet{
+        // @include opacity(0.7);
+        // width: 100%;
+        // background-position: -966px -90px;//-900px -347px;
+        height: 370px;
+        width: 620px;
+        background-size: contain;
+        background-position: -140px -170px;
     }
 }
 .home .entry-content {
