fixed cherry blossom layout on home page mobile. need to update on other pages and clean up custom.scss

--- a/assets/scss/_navbar.scss
+++ b/assets/scss/_navbar.scss
@@ -82,6 +82,9 @@
     > .container{
         @extend %opaqueBg;
         @include border-radius(10px);
+        @include max_tablet {
+            border-radius: 0;
+        }
     }
 }
 .navbar-nav {
