--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -11,10 +11,11 @@
 @import "sections";
 @import "social";
 
-
+html, body {
+    overflow-x: hidden;
+}
 body {
     padding: 0;
-    overflow-x: hidden;
     background-color: #000;
 
     @include max_tablet{
@@ -97,6 +98,11 @@ a:hover {
     border: 0;
     margin: 20px 0 0;
     padding-bottom: 0;
+    h1{
+        @include tablet {
+            text-align: right;
+        }
+    }
 }
 .post {
     margin: 0 0 40px 0;
@@ -119,7 +125,7 @@ a:hover {
     }
     > .container {
         // padding-top: 15px;
-        @extend %opaqueBg;
+        // @extend %opaqueBg;
         @include max_tablet{
             background-color: transparent;
         }
@@ -160,6 +166,9 @@ a:hover {
 }
 
 
+.search, .error404 {
+    padding: 60px;
+}
 
 /* 
  *  Sidebar
@@ -506,8 +515,12 @@ $thumb_hover: $red;
 .above-header {
     overflow: visible;
     height: 500px;
+
     @include max_tablet{
-        height: 270px;
+        height: 150px;
+    }
+    @include max_phone {
+        height: 130px;
     }
 
     h1 {
@@ -515,15 +528,24 @@ $thumb_hover: $red;
         font-size: 75px;
         // z-index: 999;
         position: absolute;
-        top: 0;
+        // top: 140px !important;
         left: auto !important;
         right: 0;
         padding: 15px;
         @include max_desktop{
             font-size: 65px;
         }
-        @include max_desktop{
-            font-size: 65px;
+        @include max_tablet {
+            font-size: 49px;
+            top: 155px !important;
+        }
+        @include max_phone {
+            font-size: 32px;
+            margin-left: 0;
+            padding: 0; 
+            right: auto;
+            left: 0;
+            top: 170px !important;
         }
     }
 }
@@ -547,14 +569,14 @@ $thumb_hover: $red;
     // z-index: 999;
 }
 #cherry-blossoms{
+    overflow-x: hidden;
     @include max_tablet{
         z-index: -1;
         // @include opacity(0.5);
     }
 }
 #cb-a{
-
-    @include background(image-url("cherry-blossom.png"));
+    @include background(image-url("cherry-blossom-shadow.png"));
     background-position: -162px 50px;
     background-repeat: no-repeat;
     height: 1100px;
@@ -567,9 +589,6 @@ $thumb_hover: $red;
         background-position: -490px 50px;
     }
     @include max_tablet{
-        // @include opacity(0.7);
-        // width: 100%;
-        // background-position: -966px -90px;//-900px -347px;
         height: 370px;
         width: 620px;
         background-size: contain;
@@ -587,19 +606,14 @@ $thumb_hover: $red;
         background-position: -750px 20px;
     }
     @include max_tablet{
-        // background-position: -750px -404px;
+        height: 370px;
+        width: 590px;
+        background-position: -125px -160px;
+        background-size: contain;
     }
     @include max_phone {
-        // background-position: -766px -404px;
-    }
-    @include max_tablet{
-        // @include opacity(0.7);
-        // width: 100%;
-        // background-position: -966px -90px;//-900px -347px;
-        height: 370px;
-        width: 620px;
-        background-size: contain;
-        background-position: -140px -170px;
+        width: 430px;
+        background-position: -95px -100px;
     }
 }
 .home .entry-content {
@@ -612,6 +626,7 @@ $thumb_hover: $red;
 }
 .blog #cb-a {
     background-position: 70% -84px;
+
     @include max_tablet{
         background-position: -852px -350px;
     }
